<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/eventEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/eventTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/venueInputTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/repeatText"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueInputTextView" />

    <Switch
        android:id="@+id/repeatSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueEditText" />

    <TextView
        android:id="@+id/timeInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/startTimeText"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="228dp"
        android:text="@string/startDateText"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="44dp"

        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

    <TextView
        android:id="@+id/startTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="80dp"

        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

    <TextView
        android:id="@+id/endDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="128dp"

        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

    <TextView
        android:id="@+id/endTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="168dp"

        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/repeatSwitch" />

    <TextView
        android:id="@+id/endDateInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"

        android:text="@string/endDateText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeInputTextView" />

    <TextView
        android:id="@+id/endTimeInputTextVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"

        android:layout_marginTop="12dp"
        android:text="@string/endTimeText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateInputTextView" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:text="@string/submitText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeTextView" />

    <AutoCompleteTextView
        android:id="@+id/venueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/venueInputTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/eventText"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/venueInputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/venueText"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>